[package]
name = "quickselect"
version = "0.1.3"
edition = "2018"
authors = ["user <free_gis@qq.com>"]
license = "BSD-3-Clause"
description = "基于rust的选择算法"
repository = "https://github.com/FreeGIS/quickselect-rs.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]